--- a/index.html
+++ b/index.html
@@ -4,89 +4,59 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homework-1</title>
+        <title>Document</title>
         <style>
-            * {
-                margin: 0;
-                padding: 0;
+            body {
+                margin: 8px 0px 0px 16px;
+                padding: 8px;
             }
 
             img {
-                position: absolute;
-                z-index: -1;
-                top: 8%;
-                left: 25%;
-                opacity: 0.75;
-                width: 50vw;
-                height: 50vh;
-                border-radius: 16px;
-            }
-
-            ul {
-                background-color: rgb(0, 255, 255);
-                height: 6vh;
-                border: 1px;
-            }
-
-            p {
-                position: absolute;
-                top: 28%;
-                left: 30%;
-                text-align: center;
-                font-size: 64px;
-                font-weight: 900;
-                font-style: oblique;
-                color: whitesmoke;
-                text-shadow: 0px 4px 8px whitesmoke;
-            }
-
-            hr {
-                border: 1px solid;
-                width: 80%;
-                border-color: rgb(119, 119, 120);
-                position: absolute;
-                left: 10%;
-                top: 65%;
-            }
-
-            span {
-                position: absolute;
-                top: 80%;
-                left: 48%;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                font-size: 24px;
-                font-weight: 900;
-                font-style: oblique;
-                color: rgb(21, 29, 189);
-            }
-            a:hover {
-                background-color: rgba(11, 124, 222, 0.981);
-                width: max-content;
-                height: max-content;
+                width: 15%;
                 border-radius: 8px;
-                text-decoration:none;
-                color: rgb(255, 255, 255);
+            }
+
+            pre {
+                font-size: 1.2rem;
             }
         </style>
     </head>
 
     <body>
-        <div>
-            <ul>
-                <a href="./profile.html"
-                    style="font-size: 32px; font-weight: 600; position: absolute; top: 1%; left: 2%;;">Profile</a>
-                <a a href="./friends.html"
-                    style="font-size: 32px; font-weight: 600; position: absolute; top: 1%; left: 7%;">Friends</a><br>
-            </ul>
-            <img src="./src/IMG_6509.JPG" alt="park">
-            <p>
-                It always seems impossible until it's done<br><br>
-            </p>
-            <hr>
-            <span>
-                Darkzero07
-            </span>
-        </div>
+        <ul>
+            <a href="./index.html">Home</a>
+            <a href="./education.html">Education</a>
+            <a href="./work.html">Work Rxperience</a>
+            <a href="./contact.html">Contact Me</a>
+        </ul>
+        <h1>Education</h1>
+        <img src="./src/41042.jpg" alt="profilepic">
+        <hr>
+        <h4>About me</h4>
+        <pre>
+            Student of Codecampre online # 16 
+            Frontend React 
+            Backend Node js
+            Database Mysql
+        </pre>
+        <hr>
+        <h4>Personal Info</h4>
+        <pre>
+            Loaction: Bkk Thailand
+            Phone: 0832951996
+            E-mail: chaiyanituporn@gmail.com
+            LineId: chaiyan-20
+         </pre>
+        <hr>
+        <h4>Skills</h4>
+        <li>Ux/UI Design (Figma)</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Git</li>
+        <li>React js</li>
+        <li>Node js</li>
+        <li>MySQL</li>
     </body>
 
 </html>
